--- a/index.html
+++ b/index.html
@@ -20,17 +20,29 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
 </head>
 <body>
+<div class="header">
+    <h1>Nik Dee</h1>
+    <p>The Lost Fairy Tales</p>
+</div>
+
 
 <div class="container">
     <br>
     <br>
     <br>
+    <br>
     <div class="row">
         <div class="col-sm-6">
-            <div>
-                <div>
+            <div class="card">
+                <div class="card-body">
                     <div class="top-container">
                         <div class="text-left">
                             <h5 id="headerLeft"></h5>
@@ -54,12 +66,13 @@
                             </select>
                         </div>
                     </div>
-                    <p id="resultTextLeft"></p>
+                    <pre id="resultTextLeft" class="textScroll">
+                    </pre>
                 </div>
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="card ">
+            <div class="card">
                 <div class="card-body">
                     <div class="top-container">
                         <div class="text-left">
@@ -84,14 +97,87 @@
                             </select>
                         </div>
                     </div>
-                    <p class="card-text textScroll" id="resultTextRight"></p>
+                    <pre id="resultTextRight" class="textScroll"></pre>
                 </div>
             </div>
         </div>
     </div>
+
     <br>
-    <script src="script.js"></script>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div class="cardB">
+        <img src="image/TheLost.jpeg" alt="TheLost" style="width:40%" class="center">
+        <h4>The Journey Begins</h4>
+        <p class="price">$19.99</p>
+        <p>Swedutainment Proudly Presents</p>
+        <p>
+            <button>Add to Cart</button>
+        </p>
+    </div>
+
+
+    <br>
+    <br>
+    <br>
+
+    <hr>
+    <div class="audioPlayer">
+
+        <label for="selection">Listen:</label>
+        <select id="selection">
+            <option value="">- Select track -</option>
+            <option value="audio/english_01.mp3">English part 1</option>
+            <option value="audio/english_02.mp3">English part 2</option>
+            <option value="audio/english_03.mp3">English part 3</option>
+            <option value="audio/english_04.mp3">English part 4</option>
+            <option value="audio/english_05.mp3">English part 5</option>
+            <option value="audio/english_06.mp3">English part 6</option>
+            <option value="audio/english_07.mp3">English part 7</option>
+            <option value="audio/Swedish_01.mp3">Swedish part 1</option>
+            <option value="audio/Swedish_02.mp3">Swedish part 2</option>
+            <option value="audio/Swedish_03.mp3">Swedish part 3</option>
+            <option value="audio/Swedish_04.mp3">Swedish part 4</option>
+            <option value="audio/Swedish_05.mp3">Swedish part 5</option>
+            <option value="audio/Swedish_06.mp3">Swedish part 6</option>
+            <option value="audio/Swedish_07.mp3">Swedish part 7</option>
+        </select>
+        <br>
+        <br>
+        <audio id="player" controls="controls">
+            <source id="mp3_src" type="audio/mp3"/>
+            Your browser does not support the audio element.
+        </audio>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
 </div>
+
+<div class="footer">
+    <h3>IOFC</h3>
+</div>
+
+<script src="script.js"></script>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
