--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </select>
                         </div>
                     </div>
-                    <pre id="resultTextLeft" class="textScroll">
+                    <pre id="resultTextLeft" class="card-text divSize">
                     </pre>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                             </select>
                         </div>
                     </div>
-                    <pre id="resultTextRight" class="textScroll"></pre>
+                    <pre id="resultTextRight" class="card-text divSize"></pre>
                 </div>
             </div>
         </div>
