--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Berättelse</title>
+    <title>lostfairytales</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -44,8 +44,9 @@
 
         </div>
 
+
         <div class="container">
-            <div id="carouselContent" class="carousel slide" data-ride="carousel">
+            <div id="carouselContent" class="carousel slide" data-ride="carousel" data-interval="13000">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active text-center p-4">
                         <p>
@@ -202,10 +203,11 @@
                 <div class="cardB">
                     <img src="image/TheLost.jpeg" alt="TheLost" style="width:40%" class="center">
                     <h4>The Journey Begins</h4>
-                    <p class="price">$19.99</p>
+                    <p class="price">250 kr</p>
                     <p>Swedutainment Proudly Presents</p>
                     <p>
-                        <button>Add to Cart</button>
+
+                        <button ><a  href="http://xn--ngonsta-exa.se/store/products/de-glomda-sagorna-resan-borjar-sveng/">PAY NOW</a></button>
                     </p>
                 </div>
             </div>
@@ -213,7 +215,7 @@
                 <div>
                     <img id="logo" src="image/logan.png" alt="logan">
 
-                    <p id="TextForlogo" class="card-text">
+                    <p id="TextForlogo" class="class="card-text"">
                        Med stöd av (Länsstyrelsens logga) Tidiga Insatser för Asylsökande
                     </p>
                 </div>
